# Valdyum-Labs

./: .env.example  .gitignore  DEPLOYMENT_STATUS.md  INTEGRATION_TESTING.md  Readme.md  docker-compose.yml  package.json  pnpm-lock.yaml  scratch.js  t54-labs-clawcredit-sdk-0.2.55.tgz  test_req.js  tsconfig.base.json
.github/workflows/: ci.yml
agents-sdk/: Cargo.toml  deploy.ts
agents-sdk/arbitrage_tracker/: Cargo.toml
agents-sdk/arbitrage_tracker/src/: config.rs  detector.rs  executor.rs  main.rs
agents-sdk/common/: Cargo.toml
agents-sdk/common/src/: config.rs  gpu.rs  horizon.rs  lib.rs  payment.rs  pubsub.rs  stellar_tx.rs  tapedrive.rs  wallet.rs
agents-sdk/liquidity_slippage_tracker/: Cargo.toml
agents-sdk/liquidity_slippage_tracker/src/: config.rs  main.rs  slippage.rs  tracker.rs
agents-sdk/mempool_monitor/: Cargo.toml
agents-sdk/mempool_monitor/src/: alerts.rs  config.rs  main.rs  monitor.rs
agents-sdk/mev_bot/: Cargo.toml
agents-sdk/mev_bot/src/: config.rs  executor.rs  main.rs  rpc.rs  strategy.rs
agents-sdk/relayer/: Cargo.toml
agents-sdk/relayer/src/: config.rs  main.rs  relay.rs
agents-sdk/templates/python/: README.md  arbitrage_tracker_agent.py  base_agent.py  liquidity_tracker_agent.py  mempool_monitor_agent.py  mev_bot_agent.py  relayer_agent.py  requirements.txt  sandbox_agent.py  trading_bot_agent.py
agents-sdk/trading_bot/: Cargo.toml
agents-sdk/trading_bot/src/: config.rs  main.rs  orders.rs  strategy.rs
client/: .eslintignore  mdx-components.tsx  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/about/: page.tsx
client/app/agents/: page.tsx
client/app/dashboard/: page.tsx
client/app/devs/: page.mdx
client/app/docs/: page.mdx
client/app/faucet/: page.tsx
client/app/marketplace/: page.tsx
client/app/trading/: page.tsx
client/app/workflow/: page.tsx
client/components/: AblyNotifications.tsx  AgentBuilder.tsx  AgentCard.tsx  AppShell.tsx  CandlestickChart.tsx  LiveFeed.tsx  Navbar.tsx  PaymentModal.tsx  ProtocolFlow.tsx  Sidebar.tsx  SmoothScrollProvider.tsx  TerminalOutput.tsx  WalletConnect.tsx
client/components/docs/: BackboneDiagram.tsx  PaymentWorkflowDiagram.tsx
client/components/sections/: AgentGrid.tsx  CTABand.tsx  FAQSection.tsx  Footer.tsx  HeroSection.tsx  LiveForge.tsx  ProtocolSection.tsx  TreasurySection.tsx  TrustStrip.tsx
client/components/ui/: hover-border-gradient.tsx
client/hooks/: useMarketplaceFeed.ts  useSmoothScroll.ts
client/lib/: api.ts  colors.ts  phantom.ts  stellar.ts
client/pages/: _error.tsx
client/types/: phantom.d.ts
contracts/: Anchor.toml  deploy-solana.sh  deploy-soroban.sh  deploy.sh  deploy.ts
contracts/af_token/: Cargo.toml  deploy.sh
contracts/af_token/src/: lib.rs
contracts/agent_registry/: Cargo.toml
contracts/agent_registry/src/: lib.rs
contracts/agent_validator/: Cargo.toml
contracts/agent_validator/src/: lib.rs
docs/: CLI_GUIDE.md  DEPLOYMENT.md  cli.md
docs/architecture/: Architechture.md
server/: .agent-store.json  Dockerfile  deploy.ts  package.json  supabase-schema.sql  tsconfig.json
server/src/: index.ts  webhook-server.ts
server/src/cli/: ably-dashboard.ts  index.ts  pipeline-manager.ts  test-smoke.ts
server/src/routes/: ably.ts  agents-deploy.ts  agents.ts  clawcredit.ts  dashboard.ts  faucet.ts  payment.ts
server/src/scripts/: clawcredit-register.ts  test-agent-micropayment.ts
server/src/services/: anthropic.ts  clawcredit.ts  demo-agents.ts  openai.ts  qstash.ts  solana-deployment.ts  solana-watcher.ts  soroban-deployment.ts  stellar.ts  supabase.ts
server/src/types/: shims.d.ts
server/src/workers/: a2a-router.ts  agent-executor.ts  billing-aggregator.ts  chain-syncer.ts  index.ts  marketplace-feed.ts  payment-verifier.ts
(+1 files in other folders)
