[package]
name        = "mev_bot"
description = "Solana Jupiter MEV bot — route-optimized opportunity execution"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[[bin]]
name = "mev_bot"
path = "src/main.rs"

[dependencies]
common       = { workspace = true }
tokio        = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
dotenvy      = { workspace = true }
rust_decimal = { workspace = true }
chrono       = { workspace = true }
futures-util  = { workspace = true }
solana-sdk    = { workspace = true }
bs58          = { workspace = true }
bincode       = { workspace = true }
base64        = { workspace = true }
