[package]
name        = "relayer"
description = "Solana cross-program transaction relay and coordination"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[[bin]]
name = "relayer"
path = "src/main.rs"

[dependencies]
common       = { workspace = true }
tokio        = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
dotenvy      = { workspace = true }
rust_decimal = { workspace = true }
chrono       = { workspace = true }
futures-util = { workspace = true }
