[package]
name = "af_token"
version = "0.1.0"
edition = "2021"
authors = ["Valdyum"]

[lib]
crate-type = ["cdylib", "lib"]
name = "af_token"

[dependencies]
anchor-lang = { version = "0.30.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
